refactor: modernize codebase with generics, improved reflection, and updated Bukkit API usage while removing deprecated inventory updates.